<resources>
    <string name="app_name">ShopList</string>
    <string name="todays_date">14/02/2022</string>
    <string name="last_shop_date">01/01/2022</string>
    <string name="last_shop_value">R$ 500,00</string>
    <string name="adicionar_item">Adicionar Item</string>
    <string name="adicionar_categoria">Adicionar Categoria</string>
    <string name="teste">Teste</string>
    <string name="procurar_itens">Procurar itens...</string>
    <string name="digite_o_nome_do_item">Digite o nome do item...</string>
    <string name="add_item_label">Adicionar Novo Item</string>
    <string name="confirmar">Confirmar</string>
    <string name="encarte">Consulta de Encartes</string>
    <string name="criar_lista">Criar Lista</string>
    <string name="pesquise_o_item">Pesquise o item...</string>
    <string name="digite_a_data_da_compra">Digite a data da compra...</string>
    <string name="limpa_lista">Limpa Lista</string>
    <string name="confirma_lista">Confirma Lista</string>
    <string name="digite_o_nome_da_lista">Digite o nome da lista...</string>
    <string name="data_da_compra">Data da Compra:</string>
    <string name="informe_o_valor_total">Informe o valor total...</string>
    <string name="gravar">GRAVAR</string>
    <string name="novo_valor">Novo Valor</string>
    <string name="valor_total_da_compra">Valor Total da Compra:</string>
    <string name="btn_add">+</string>
    <string name="confirma">Confirma</string>
    <string name="valores_totais">Valores totais</string>
    <string name="items_most_bought">Items mais comprados</string>
    <string name="qtt_bought">Quantidades compradas</string>
    <string name="lbl_descarta_lista">Lista será perdida. Confirma?</string>
    <string name="msg_not_possible_category_exclusion">Categoria contém Itens. Não é possível excluir.</string>
    <string name="msg_category_excluded">Categoria excluída</string>
    <string name="msg_add_category">Adicionar categoria...</string>
    <string name="shop_history">Histórico de Compras</string>
    <string name="add_item_to_list">Adiciona um item a lista</string>
    <string name="list_itens">Itens da Lista</string>
    <string name="created_lists">Listas Criadas</string>
    <string name="items">Itens</string>
</resources>